[gd_scene load_steps=43 format=3 uid="uid://colon3l2hg8xd"]

[ext_resource type="Texture2D" uid="uid://enp76h0sm8yj" path="res://assets/sprites/knight.png" id="1_bvtfk"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_fqn5r"]
[ext_resource type="AudioStream" uid="uid://dskjaq6q4rq8x" path="res://assets/sounds/hurt.wav" id="3_pbf1r"]
[ext_resource type="AudioStream" uid="uid://qrl1glmogeew" path="res://assets/sounds/power_up.wav" id="4_dmbp3"]
[ext_resource type="AudioStream" uid="uid://c62gmr4rensxh" path="res://assets/sounds/jump.wav" id="5_an0fk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_go6hi"]
atlas = ExtResource("1_bvtfk")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxmux"]
atlas = ExtResource("1_bvtfk")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_drysp"]
atlas = ExtResource("1_bvtfk")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icqxc"]
atlas = ExtResource("1_bvtfk")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1qk8"]
atlas = ExtResource("1_bvtfk")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4cwv"]
atlas = ExtResource("1_bvtfk")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_drv4g"]
atlas = ExtResource("1_bvtfk")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0jii"]
atlas = ExtResource("1_bvtfk")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq3li"]
atlas = ExtResource("1_bvtfk")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2bv7"]
atlas = ExtResource("1_bvtfk")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwvnb"]
atlas = ExtResource("1_bvtfk")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx6wl"]
atlas = ExtResource("1_bvtfk")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oak2p"]
atlas = ExtResource("1_bvtfk")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axvrx"]
atlas = ExtResource("1_bvtfk")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_seica"]
atlas = ExtResource("1_bvtfk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7agr"]
atlas = ExtResource("1_bvtfk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6dpt"]
atlas = ExtResource("1_bvtfk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mebq2"]
atlas = ExtResource("1_bvtfk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioufu"]
atlas = ExtResource("1_bvtfk")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpfc5"]
atlas = ExtResource("1_bvtfk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgbp4"]
atlas = ExtResource("1_bvtfk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m71e6"]
atlas = ExtResource("1_bvtfk")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnf1p"]
atlas = ExtResource("1_bvtfk")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j74ib"]
atlas = ExtResource("1_bvtfk")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslu6"]
atlas = ExtResource("1_bvtfk")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyp6x"]
atlas = ExtResource("1_bvtfk")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8d3e"]
atlas = ExtResource("1_bvtfk")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_en54x"]
atlas = ExtResource("1_bvtfk")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1myk2"]
atlas = ExtResource("1_bvtfk")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaxlo"]
atlas = ExtResource("1_bvtfk")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_32myn"]
atlas = ExtResource("1_bvtfk")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_radai"]
atlas = ExtResource("1_bvtfk")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ew24"]
atlas = ExtResource("1_bvtfk")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h35k6"]
atlas = ExtResource("1_bvtfk")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yskg"]
atlas = ExtResource("1_bvtfk")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oc8ij"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_go6hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxmux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drysp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icqxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1qk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4cwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drv4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0jii")
}],
"loop": true,
"name": &"dash",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq3li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2bv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwvnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx6wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oak2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axvrx")
}],
"loop": true,
"name": &"dying",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_seica")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7agr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6dpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mebq2")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioufu")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpfc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m71e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnf1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j74ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyp6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8d3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en54x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1myk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaxlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32myn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_radai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ew24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h35k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yskg")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qb0lt"]
radius = 6.08276

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_fqn5r")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_oc8ij")
animation = &"dying"
autoplay = "idle"
frame_progress = 0.662688

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_qb0lt")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pbf1r")
bus = &"SFX"

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dmbp3")
bus = &"SFX"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_an0fk")
bus = &"SFX"
